--- a/smos-docs-site/index.html
+++ b/smos-docs-site/index.html
@@ -9,3 +9,14 @@ title: Home
 <p>
   Smos is a purely functional semantic tree-based editor to replace Emacs' Org Mode for Getting Things Done.
 </p>
+<p>
+  In short:
+  <ul>
+    <li>
+      What todoist would have been if it had been written by the people who wrote vim
+    </li>
+    <li>
+      Emacs' Org Mode but without the emacs around it
+    </li>
+  </ul>
+</p>
