--- a/smos-web-server/front/assets/index.html
+++ b/smos-web-server/front/assets/index.html
@@ -13,6 +13,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="../dist/app.js"></script>
+    <script src="../dist/smos-web-server-front.js"></script>
   </body>
 </html>
