--- a/smos-web-server/front/assets/index.html
+++ b/smos-web-server/front/assets/index.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="../dist/smos-web-server-front.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
