reorganised the web server to open the editor on files

--- a/smos-web-server/front/assets/index.html
+++ b/smos-web-server/front/assets/index.html
@@ -10,7 +10,7 @@
     </style>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="editor"></div>
     <script src="./index.js"></script>
   </body>
 </html>
