add the extra info to the booking email

--- a/smos-server-gen/test_resources/booking/email.html
+++ b/smos-server-gen/test_resources/booking/email.html
@@ -6,6 +6,11 @@ Example Client Name (
 <code>user@example.com</code>
 ).</p>
 <br>
+<p>This is extra info for the user</p>
+<p>On</p>
+<p>Multiple</p>
+<p>Lines.</p>
+<br>
 <p>For Example User Name:</p>
 <p>Thursday 13:00 2023-06-22
 (Europe/Zurich)</p>
